--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20210913/pngtree-cobweb-on-red-grunge-background-image_889625.jpg');
+       background-image: url('https://i.pinimg.com/736x/fd/23/0f/fd230f30fe47d1b928a598ecd585d27b.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
@@ -20,7 +20,26 @@ body {
        margin: 0;
     color: #fcf7f7;
 }
+table {
+    background-color: lightblue; /* Define um fundo azul claro */
+}
 
+  style>
+        .container {
+            text-align: center;
+            margin: 20px auto;
+        }
+        table {
+            color: rgb(32, 25, 25);
+            margin: auto;
+            border-collapse: collapse;
+            width: 60%;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid rgb(63, 10, 187);
+        }
+    style>
 header {
     background-color: #181414;
     color: rgb(112, 33, 33);
@@ -39,14 +58,14 @@ h1, h2 {
     max-width: 1200px;
     margin: 20px auto;
     padding: 10px;
-    color: #d7d7d7;
+    color: #ffffff;
 }
 
 .intro {
     font-family: Comic Sans MS;
     text-align: center;
     margin-bottom: 30px;
-    background: #141212;
+    background: #17267eb7;
     padding: 15px;
     border-radius: 8px;
 }
