--- a/css/indexhomemlongedecas.css
+++ b/css/indexhomemlongedecas.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20210913/pngtree-cobweb-on-red-grunge-background-image_889625.jpg');
+       background-image: url('https://img.freepik.com/vetores-gratis/fundo-azul-teia-de-aranha-de-halloween_23-2148647201.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
@@ -20,7 +20,26 @@ body {
        margin: 0;
     color: #fcf7f7;
 }
+table {
+    background-color: lightblue; /* Define um fundo azul claro */
+}
 
+  style>
+        .container {
+            text-align: center;
+            margin: 20px auto;
+        }
+        table {
+            color: rgb(32, 25, 25);
+            margin: auto;
+            border-collapse: collapse;
+            width: 60%;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid rgb(63, 10, 187);
+        }
+    style>
 header {
     background-color: #181414;
     color: rgb(112, 33, 33);
@@ -46,7 +65,7 @@ h1, h2 {
     font-family: Comic Sans MS;
     text-align: center;
     margin-bottom: 30px;
-    background: #141212;
+    background: #1b53b9;
     padding: 15px;
     border-radius: 8px;
 }
