--- a/css/aranhavero.css
+++ b/css/aranhavero.css
@@ -1,12 +1,12 @@
 /* Estilo geral */
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Comic Sans MS;
     font-weight: 400;
     margin: 0;
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://i.pinimg.com/736x/11/a9/4e/11a94e7f7d9e92dbcb687ae5fdb6eafd.jpg');
+       background-image: url('https://i.pinimg.com/736x/fd/23/0f/fd230f30fe47d1b928a598ecd585d27b.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
@@ -23,14 +23,7 @@ body {
 table {
     background-color: lightblue; /* Define um fundo azul claro */
 }
-
-
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  .container {
+.container {
     position: relative;
     width: 100%;
     height: 500px; /* Você pode ajustar a altura conforme necessário */
@@ -50,21 +43,6 @@ body {
     color: white;
     text-align: center;
     z-index: 1; /* Garante que o texto fique acima da imagem */
-  }
-  
-  h1 {
-    font-size: 3rem;
-    margin: 0;
-  }
-  
-  p {
-    font-size: 1.25rem;
-  }
-  
-.container {
-    display: block;
-    width: 100%;
-    margin: 0 auto;
   }
   
   style>
@@ -101,14 +79,14 @@ h1, h2 {
     max-width: 1200px;
     margin: 20px auto;
     padding: 10px;
-    color: #d7d7d7;
+    color: #ffffff;
 }
 
 .intro {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Comic Sans MS;
     text-align: center;
     margin-bottom: 30px;
-    background: #1b53b9;
+    background: #17267eb7;
     padding: 15px;
     border-radius: 8px;
 }
