--- a/css/Marve Spider-Man (2018).css
+++ b/css/Marve Spider-Man (2018).css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://img.freepik.com/vetores-premium/fundo-de-teia-de-aranha-de-halloween_23-2148631873.jpg');
+       background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20210913/pngtree-cobweb-on-red-grunge-background-image_889625.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
@@ -21,7 +21,7 @@ body {
     color: #fcf7f7;
 }
 table {
-    background-color: rgba(177, 82, 231, 0.808); /* Define um fundo azul claro */
+    background-color: rgba(196, 30, 30, 0.678); /* Define um fundo azul claro */
 }
 .container {
     position: relative;
@@ -51,18 +51,18 @@ table {
             margin: 20px auto;
         }
         table {
-            color: rgb(32, 25, 25);
+            color: rgb(219, 196, 196);
             margin: auto;
             border-collapse: collapse;
             width: 60%;
         }
         th, td {
             padding: 10px;
-            border: 1px solid rgb(63, 10, 187);
+            border: 1px solid rgb(134, 122, 160);
         }
     style>
 header {
-    background-color: #181414;
+    background-color: #bb9f9f;
     color: rgb(177, 36, 36);
     text-align: center;
     padding: 20px;
@@ -86,7 +86,7 @@ h1, h2 {
     font-family: Comic Sans MS;
     text-align: center;
     margin-bottom: 30px;
-    background: #5a15a894;
+    background: #9e1919ad;
     padding: 10px;
     border-radius: 9px;
 }
@@ -109,9 +109,9 @@ h1, h2 {
 }
 
 .card {
-    background: #8158ce8e;
+    background: #860c0ce5;
     border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px rgba(39, 35, 35, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     max-width: 280px;
@@ -132,7 +132,7 @@ h1, h2 {
 .card h3 {
     margin: 15px 0;
     font-size: 1.25rem; 
-    color: #000000;
+    color: #ffefef;
 }
 
 .card p {
