--- a/css/stylespaulo.css
+++ b/css/stylespaulo.css
@@ -18,9 +18,32 @@ body {
 }
 
 header {
-    background-color: #862929;
-    color: #16074d;
+    background-color: #181414;
+    color: rgb(112, 33, 33);
     text-align: center;
     padding: 20px;
-    box-shadow: 0 4px 6px rgba(66, 48, 48, 0.3);
+}
+
+h1, h2 {
+    font-family: Comic Sans MS;
+    margin: 0;
+    font-weight: 800;
+    text-align: center;
+}
+
+
+.container {
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 10px;
+    color: #d7d7d7;
+}
+
+.intro {
+    font-family: Comic Sans MS;
+    text-align: center;
+    margin-bottom: 30px;
+    background: #141212;
+    padding: 15px;
+    border-radius: 8px;
 }
