--- a/tarefa1/tarefa1.css
+++ b/tarefa1/tarefa1.css
@@ -3,7 +3,14 @@
 url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
+    background-image: url('https://occ-0-8407-92.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABR6vn8BtaC8r6FhDOfMCliOri5vm4p5bCnxzV61blyd_QJP0qr8VdYGGyoFxkLfwDc1nDVqf4ilKrmD1XquOAlXD29EyAM4UbC4i.jpg?r=54a');
     background-position: top;
+    
+}
+
+*{
+
+
 }
 
 *{
@@ -28,5 +35,46 @@ header {
     text-align: center;
     padding: 20px;
     box-shadow: 0 4px 6px rgba(66, 48, 48, 0.3);
+
+}
+
+.cards-container {
+    display: flex;
+    gap: 20px; /* Espaço entre os cards */
+    flex-wrap: wrap; /* Para permitir que os cards quebrem para a próxima linha se o espaço for pequeno */
+}
+
+.card {
+    background: #860c0ce5;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(39, 35, 35, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    max-width: 280px;
+    text-align: center;
+    border-radius: 30px;
+}
+
+.card:hover {
+    transform: translateY(-10px); 
+    box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
+}
+
+.card img {
+    width: 300px;
+    height: 400px;
+    
+}
+
+.card h3 {
+    margin: 15px 0;
+    font-size: 1.25rem; 
+    color: #ffefef;
+}
+
+.card p {
+    font-size: 0.9rem;
+    color: #000000;
+    margin: 0 10px 20px;
 }
 
