--- a/css/aranhavero.css
+++ b/css/aranhavero.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://preview.redd.it/310bn0w01jk81.jpg?auto=webp&s=7f18a120aa7ff9313a158511df9fadc845778d81');
+       background-image: url('https://img.freepik.com/vetores-gratis/estilo-de-fundo-de-teia-de-aranha-de-halloween_23-2148626623.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
@@ -21,7 +21,7 @@ body {
     color: #fcf7f7;
 }
 table {
-    background-color: rgba(240, 32, 32, 0.808); /* Define um fundo azul claro */
+    background-color: rgba(35, 85, 194, 0.678); /* Define um fundo azul claro */
 }
 .container {
     position: relative;
@@ -40,7 +40,7 @@ table {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: rgb(207, 2, 2);
+    color: rgb(255, 237, 237);
     text-align: center;
     z-index: 1; /* Garante que o texto fique acima da imagem */
   }
@@ -51,19 +51,19 @@ table {
             margin: 20px auto;
         }
         table {
-            color: rgb(32, 25, 25);
+            color: rgb(255, 255, 255);
             margin: auto;
             border-collapse: collapse;
             width: 60%;
         }
         th, td {
             padding: 10px;
-            border: 1px solid rgb(63, 10, 187);
+            border: 1px solid rgb(134, 122, 160);
         }
     style>
 header {
-    background-color: #181414;
-    color: rgb(112, 33, 33);
+    background-color: #bb9f9f;
+    color: rgb(177, 36, 36);
     text-align: center;
     padding: 20px;
 }
@@ -86,7 +86,7 @@ h1, h2 {
     font-family: Comic Sans MS;
     text-align: center;
     margin-bottom: 30px;
-    background: #a81a1094;
+    background: #0538858f;
     padding: 10px;
     border-radius: 9px;
 }
@@ -109,9 +109,9 @@ h1, h2 {
 }
 
 .card {
-    background: #87cfeb8e;
+    background: #0c2d75e5;
     border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px rgba(39, 35, 35, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     max-width: 280px;
@@ -132,7 +132,7 @@ h1, h2 {
 .card h3 {
     margin: 15px 0;
     font-size: 1.25rem; 
-    color: #333;
+    color: #ffefef;
 }
 
 .card p {
@@ -270,5 +270,4 @@ a:hover {
             font-weight: bold;
             margin-top: 15px;
         }
-        
         
