--- a/css/stylespaulo.css
+++ b/css/stylespaulo.css
@@ -19,7 +19,7 @@ body {
 
 header {
     background-color: #181414;
-    color: rgb(112, 33, 33);
+    color: rgb(185, 39, 39);
     text-align: center;
     padding: 20px;
 }
@@ -58,4 +58,47 @@ h1, h2 {
     color: #e4d9d9;
     margin: 0 10px 10px;
 }
+.form-section {
+    background: #7b1515d5;
+    padding: 10px;
+    border: 1px solid #080808;
+    border-radius:21px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 90px auto;
+    text-align: center;
+}
 
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label {
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+form input {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 5px solid #301515;
+    border: radius 5px;
+}
+
+form button {
+    padding: 15px ;
+    background-color: #8b1616;
+    color: #e4d9d9;
+    border:rgb(114, 32, 32);
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+form button:hover {
+    background-color: #9b7c7c;
+}
+
+   
