--- a/tarefa1/tarefa1.css
+++ b/tarefa1/tarefa1.css
@@ -12,26 +12,33 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #000000;
-    color: #c20000;
+    background-color: #1a266d;
+    color: #dddddd;
     transition: all 0.3s ease-in-out;
 }
 
 header {
-    background-color: #181414;
-    color: rgb(112, 33, 33);
+    background-color: #ffcbcb;
+    color: rgb(73, 40, 40);
     text-align: center;
     padding: 20px;
 }
 
-h1, h2 {
+h1 {
+    color: #ffffff;
     font-family: Comic Sans MS;
     margin: 0;
     font-weight: 800;
     text-align: center;
 }
 
-
+h2 {
+    color: #ffe6e6;
+    font-family: Comic Sans MS;
+    margin: 0;
+    font-weight: 800;
+    text-align: center;
+}
 .category {
     margin-bottom: 20px;
 }
@@ -60,12 +67,23 @@ h1, h2 {
 }
 
 
+.secao-form {
+    background: #08811c;
+    padding: 20px;
+    border: 1px solid #0c0a0a;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 20px auto;
+    text-align: center;
+}
+
 .form-section {
-    background: #861717;
+    background: #645a5a;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(163, 150, 150, 0.1);
     max-width: 400px;
     margin: 20px auto;
     text-align: center;
@@ -85,6 +103,8 @@ form input {
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: #19472b;
+    font-size: large;
 }
 
 form select {
@@ -94,18 +114,22 @@ form select {
     border-radius: 5px;
 }
 
+resultado_soma {
+    
+}
 
 form button {
     padding: 10px;
-    background-color: #791a1a;
+    background-color: #0d5824;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    
 }
 
 form button:hover {
-    background-color: #eb9191;
+    background-color: #4d8365;
 }
 
