modificando o css das paginas

--- a/css/aranhavero.css
+++ b/css/aranhavero.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://img.freepik.com/vetores-gratis/estilo-de-fundo-de-teia-de-aranha-de-halloween_23-2148626623.jpg');
+       background-image: url('https://sm.ign.com/ign_br/screenshot/default/miles_2xu4.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
