--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://i.pinimg.com/736x/fd/23/0f/fd230f30fe47d1b928a598ecd585d27b.jpg');
+       background-image: url('https://img.freepik.com/vetores-gratis/quadrinhos-abstrato-azul_225004-669.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
