--- a/css/Marve Spider-Man (2018).css
+++ b/css/Marve Spider-Man (2018).css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20210913/pngtree-cobweb-on-red-grunge-background-image_889625.jpg');
+       background-image: url('https://wallpapers-clan.com/wp-content/uploads/2024/02/aesthetic-spiderman-logo-desktop-wallpaper-preview.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
@@ -21,9 +21,36 @@ body {
     color: #fcf7f7;
 }
 table {
-    background-color: rgba(196, 30, 30, 0.678); /* Define um fundo azul claro */
+    background-color: rgba(196, 30, 30, 0.877); /* Define um fundo azul claro */
  
 }
+
+header {
+    background-color: #000000; /* Cor de fundo do cabeçalho */
+    padding: 20px;
+    text-align: center;
+    color: #fffefe;
+    box-shadow: 0px 2px 5px rgba(238, 238, 238, 0.1); /* Sombra no cabeçalho */
+  }
+
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin: 0 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+  }
+
 .container {
     position: relative;
     width: 100%;
@@ -42,7 +69,7 @@ table {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: rgb(207, 2, 2);
+    color: rgb(77, 5, 5);
     text-align: center;
     z-index: 1; /* Garante que o texto fique acima da imagem */
   }
@@ -53,16 +80,17 @@ table {
             margin: 20px auto;
         }
         table {
-            color: rgb(219, 196, 196);
+            color: rgb(255, 255, 255);
             margin: auto;
             border-collapse: collapse;
             width: 60%;
         }
         th, td {
             padding: 10px;
-            border: 1px solid rgb(134, 122, 160);
+            border: 1px solid rgb(177, 177, 177);
         }
     style>
+
 header {
     background-color: #bb9f9f;
     color: rgb(177, 36, 36);
@@ -81,17 +109,17 @@ h1, h2 {
     max-width: 1200px;
     margin: 10px auto;
     padding: 10px;
-    color: #f1e4e4;
+    color: #ffffff;
 }
 
 .intro {
     font-family: Comic Sans MS;
     text-align: center;
     margin-bottom: 30px;
-    background: #9e1919ad;
+    background: #9e1919da;
     padding: 10px;
     border-radius: 9px;
-    margin: 4px auto;
+    margin: 10px auto;
 }
 
 .category {
