--- a/css/Spider-Man(2023).css
+++ b/css/Spider-Man(2023).css
@@ -23,6 +23,31 @@ body {
 table {
     background-color: rgba(196, 30, 30, 0.678); /* Define um fundo azul claro */
 }
+header {
+    background-color: #000000; /* Cor de fundo do cabeçalho */
+    padding: 20px;
+    text-align: center;
+    color: #fff4f4;
+    box-shadow: 0px 2px 5px rgba(238, 238, 238, 0.1); /* Sombra no cabeçalho */
+  }
+
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin: 0 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+  }
 .container {
     position: relative;
     width: 100%;
