--- a/css/atraves.css
+++ b/css/atraves.css
@@ -23,6 +23,32 @@ body {
 table {
     background-color: rgba(177, 82, 231, 0.808); /* Define um fundo azul claro */
 }
+
+header {
+    background-color: #000000; /* Cor de fundo do cabeçalho */
+    padding: 20px;
+    text-align: center;
+    color: #fff4f4;
+    box-shadow: 0px 2px 5px rgba(238, 238, 238, 0.1); /* Sombra no cabeçalho */
+  }
+
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin: 0 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+  }
 .container {
     position: relative;
     width: 100%;
@@ -70,7 +96,7 @@ header {
 
 h1, h2 {
     font-family: Comic Sans MS;
-    margin: 0;
+    margin: 1;
     font-weight: 800;
     text-align: center;
 }
@@ -89,6 +115,7 @@ h1, h2 {
     background: #5a15a894;
     padding: 10px;
     border-radius: 9px;
+    margin: 20px;
 }
 
 .category {
@@ -110,12 +137,13 @@ h1, h2 {
 
 .card {
     background: #8158ce8e;
-    border-radius: 12px;
+    border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     max-width: 280px;
     text-align: center;
+    margin: auto;
 }
 
 .card:hover {
