--- a/css/indexhomemlongedecas.css
+++ b/css/indexhomemlongedecas.css
@@ -23,6 +23,33 @@ body {
 table {
     background-color: rgba(175, 30, 30, 0.678); /* Define um fundo azul claro */
 }
+
+header {
+    background-color: #000000; /* Cor de fundo do cabeçalho */
+    padding: 20px;
+    text-align: center;
+    color: #fff4f4;
+    box-shadow: 0px 2px 5px rgba(238, 238, 238, 0.1); /* Sombra no cabeçalho */
+  }
+
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin: 0 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+  }
+  
 .container {
     position: relative;
     width: 100%;
@@ -61,6 +88,7 @@ table {
             border: 1px solid rgb(134, 122, 160);
         }
     style>
+    
 header {
     background-color: #bb9f9f;
     color: rgb(85, 23, 23);
@@ -70,9 +98,10 @@ header {
 
 h1, h2 {
     font-family: Comic Sans MS;
-    margin: 0;
+    margin: 1;
     font-weight: 800;
     text-align: center;
+    margin: 1px;
 }
 
 .container {
@@ -89,6 +118,7 @@ h1, h2 {
     background: #d618188f;
     padding: 10px;
     border-radius: 9px;
+    margin: 10px;
 }
 
 .category {
