--- a/css/milesmorales2020.css
+++ b/css/milesmorales2020.css
@@ -4,7 +4,7 @@ body {
     font-weight: 400;
     margin: 0;
     padding: 0;
-    background-color: #fff3f3;
+    background-color: #ffffff;
        /* Definir a imagem de fundo */
        background-image: url('https://wallpapers.com/images/hd/spider-man-into-the-spider-verse-in-black-backdrop-rgyn5j9dq919zpqh.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
@@ -21,8 +21,33 @@ body {
     color: #fcf7f7;
 }
 table {
-    background-color: rgba(196, 30, 30, 0.678); /* Define um fundo azul claro */
+    background-color: rgba(163, 39, 39, 0.705); /* Define um fundo azul claro */
 }
+header {
+    background-color: #000000; /* Cor de fundo do cabeçalho */
+    padding: 20px;
+    text-align: center;
+    color: #fff4f4;
+    box-shadow: 0px 2px 5px rgba(238, 238, 238, 0.1); /* Sombra no cabeçalho */
+  }
+
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin: 0 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+  }
 .container {
     position: relative;
     width: 100%;
