modificando o css e o  html v. 1.0.3

--- a/css/indexhomemlongedecas.css
+++ b/css/indexhomemlongedecas.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-color: #fff3f3;
        /* Definir a imagem de fundo */
-       background-image: url('https://img.freepik.com/vetores-gratis/fundo-de-dia-das-bruxas-aranha-vermelha-web_23-2148275744.jpg?semt=ais_hybrid');
+       background-image: url('https://img.freepik.com/vetores-gratis/elemento-de-teia-de-aranha-em-modelo-de-fundo-preto_53876-97461.jpg');
        /* Tornar a imagem de fundo adaptável à tela */
        background-size: cover;
        /* Manter a imagem fixa quando a página rolar */
