--- a/css/aranhavero.css
+++ b/css/aranhavero.css
@@ -1,6 +1,18 @@
-/* Estilo geral */
+/* Estilo geral */@font-face {
+    font-family: 'SpiderMan';
+    src: url('path-to-font/SpiderManMovieFont.ttf') format('truetype');
+}
+
+.spider-font {
+    font-family: 'SpiderMan', sans-serif;
+    color: red;
+    text-align: center;
+    font-size: 60px;
+    margin-top: 100px;
+}
+
 body {
-    font-family: Comic Sans MS;
+    font-family: 'Arial', sans-serif;
     font-weight: 400;
     margin: 0;
     padding: 0;
@@ -97,7 +109,7 @@ header {
 }
 
 h1, h2 {
-    font-family: Comic Sans MS;
+    font-family: 'Arial', sans-serif;
     margin: 0;
     font-weight: 800;
     text-align: center;
@@ -111,7 +123,7 @@ h1, h2 {
 }
 
 .intro {
-    font-family: Comic Sans MS;
+    font-family: 'Arial', sans-serif;
     text-align: center;
     margin-bottom: 30px;
     background: #0538858f;
